<resources>
    <string name="app_name">practica1comActivity</string>
    <string name="lblA1Bienvenida">INGRESA TUS DATOS</string>
    <string name="btnA1Siguiente">SigActivity</string>
    <string name="lblA2Saludo">HOLAAAAAAA!!</string>
    <string name="txtA1pieDatos">Ingresa Nombre</string>
    <string name="txtA2id">Ingresa ID</string>
    <string name="txtA3Correo">Ingresa Correo</string>
    <string name="btnA1pasaParametro">Capturar</string>
</resources>